# ner-example

./: .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  base_config.cfg  create_venv.sh  setup.cfg  versioneer.py
data/medical_ner_kaggle/: Corona2.json
ner_example/: __init__.py  _version.py
ner_example/medical_ner_fine_tuning/: prerare_train_data.py  run_train.sh
