[metadata]
name = ner_example
description = Default files and configuration for starting a new project in Ubuntu.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucasmtz/pyproject-template.git
author = Lucas Moreira Guimarães
author_email = lucasmtz@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    spacy[transformers]
python_requires = >=3.8

[options.extras_require]
dev =
    black
    coverage
    flake8
    ipykernel
    pre-commit
    pytest

[versioneer]
vcs = git
style = pep440
versionfile_source = ner_example/_version.py
versionfile_build = ner_example/_version.py
tag_prefix = v
parentdir_prefix = ner_example-

[coverage:run]
branch = True
omit =
    */tests/*
    ner_example/_typing.py
    ner_example/_version.py
source = ner_example

[coverage:report]
ignore_errors = False
show_missing = True
omit =
    ner_example/_version.py
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[coverage:html]
directory = coverage_html_report
